<resources>
    <string name="app_name">The Avengers</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forget_password">Forget Password</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>